package com.example.deviceusage;

public enum ListFragmentType {
    Regular, Search, Favourite
}
