package com.example.deviceusage;

public interface UserCallback {
    void onUserLoaded(User user);
}
